--- a/ItAcademy.Persistence/ItAcademy.Persistence.csproj
+++ b/ItAcademy.Persistence/ItAcademy.Persistence.csproj
@@ -12,6 +12,12 @@
 
     <ItemGroup>
       <PackageReference Include="AutoFixture" Version="4.18.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.8">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="7.0.8" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="2.0.0-preview1-final" />
     </ItemGroup>
 
 </Project>
