--- a/ItAcademy/ItAcademy.csproj
+++ b/ItAcademy/ItAcademy.csproj
@@ -7,14 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AutoFixture" Version="4.18.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.8" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\ItAcademy.Application\ItAcademy.Application.csproj" />
+      <ProjectReference Include="..\ItAcademy.Persistence\ItAcademy.Persistence.csproj" />
     </ItemGroup>
 
 </Project>
