--- a/ItAcademy/appsettings.Development.json
+++ b/ItAcademy/appsettings.Development.json
@@ -5,7 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "WebApiDatabase": "Data Source=LocalDatabase.db"
+  },
   "JwtTokenOptions": {
-    "Secret" : "some secret"
+    "Secret" : "some secret some secret some secret some secret"
   }
 }
